crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__one_def_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "# leading comment\nx = 5\n\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            Num=>IntBase10@2
        EndAssign)
        HintExpr
        Num=>IntBase10@3
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("x"), IntBase10("5"))
IntBase10("42")

[=== formatted below ===]

