crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__one_minus_two_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "1-2\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Num=>Int@0
            InlineBinOpMinus=>OpBinaryMinus@1
            Num=>Int@2
        EndBinOpMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("1"), Minus, IntBase10("2"))

[=== formatted below ===]

