crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__one_plus_two_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "1 + 2\n"
---
(BeginTopLevelDecls
    (*
        HintExpr
        Num=>IntBase10@0
        InlineBinOpPlus=>OpPlus@1
        Num=>IntBase10@2
    EndBinOpPlus)
EndTopLevelDecls)

[=== canfmt below ===]
BinOp(IntBase10("1"), Plus, IntBase10("2"))

[=== formatted below ===]

