crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__opaque_reference_expr_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "@Age\n\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr OpaqueName=>OpaqueName@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
OpaqueName("@Age")

[=== formatted below ===]

